assets/css/style.css
.main_container .top_toolbar{
    display: block;
	background:#E2F1FF;
	padding: 70px 30px 10px 30px;
	border-bottom: 1px solid #ddd;
    margin-left: 230px;
}
.nav-sm .main_container .top_toolbar {
    display: block;
    margin-left: 70px;
    z-index: 2
}

.toolbar-left{
	padding-top: 15px;
}
.toolbar-right{
	
	/*
	justify-content: flex-end;
	display: flex;
	*/
}
.button-toolbar-item{
	text-transform: uppercase;
	float:right;
	text-align:center;
	font-size:15px;
	margin: 0px 10px;
}
.modal-filter {
    position: fixed;
    top: 0;
    bottom: 0;
    overflow-y: auto;
	z-index: 999;
    width: 300px;
	height: 100%;
	right:-300px;
	border-left: solid 1px #cccccc;
	background: #ffffff;
	padding: 20px;
}
.filter-dialog{
	width: 100%;
	height: 100%;
}
.filter-header{
	font-size: 15px;
	font-weight: 500;
	border-bottom: 1px solid #e9ecef; 
}
.filter-body{
	padding: 10px 0px 80px;
}

.filter-footer{
	padding: 10px 0;
	border-top: 1px solid #e9ecef;
	background: #fff;
    bottom: 0px;
    clear: both;
    position: fixed;
	width: 280px;
}

.semi-width .modal-filter{
	right:0;
}
.semi-width .right_col, .semi-width .top_nav, .semi-width .top_toolbar, .semi-width footer{
	margin-right: 300px;
}
.modal-filter, .semi-width .modal-filter, .right_col, .semi-width .right_col, .top_nav, .semi-width .top_nav, .semi-width .top_toolbar, .top_toolbar, footer, .semi-width footer{
	transition: all 0.5s ease;	
}
.sticky {
  position: fixed;
  top: 0px;
  width: 100%;
  z-index: 999;
}
.sticky2 {
  position: fixed;
  top: 60;
  width: 100%;
  z-index: 999;
}
.modal-content{
	border-radius: 2px;
}
@media (max-width: 991px) {
	.nav-md .container.body .top_toolbar {
        width: 100%;
        margin: 0;
    }
	/*
	.toolbar-right{
		justify-content: center;	
	}
	*/
	.toolbar-left{
		text-align:center;
	}
}
pre{
	display: block;
	padding: 0;
	margin: 0;
	font-size: 13px;
	line-height: 1.42857143;
	color: #73879C;
	word-break: break-all;
	word-wrap: break-word;
	background-color: transparent;
	border: none;
	border-radius: none;
}
.font-weight-bold{
	font-weight: bold;
}
.align-middle{vertical-align:middle!important}
.hidding{
	display: none;
}
.displayed{
	display: block;
}

.marquee {
	float: left;
	margin: 0;
	padding: 18px 0px;
	width: 60%;
	height: 18px;	
	overflow: hidden;
	position: relative;
    white-space: nowrap;
    box-sizing: border-box;
    animation: marquee 20s linear infinite;	
}
.marquee:hover {
  animation-play-state: paused
}
@keyframes marquee { 
0% { text-indent: 100% }
100%{text-indent: -50%}
}

